--- a/data_analysis_code.Rmd
+++ b/data_analysis_code.Rmd
@@ -240,6 +240,9 @@ View(dataset_complete_cases)
     table(dataset_complete_cases$air_district) # 70 schools in Feather River. why STR so high??
     
   round(prop.table(table(dataset_complete_cases$air_district)),3)
+# make A variable into numeric
+  dataset_complete_cases$pm25_12_plus <- ifelse(dataset_complete_cases$pm25_12_plus=="yes",1,0)
+  
 ```
 
 ```{r iptw & tmle BY STEPHEN, eval=FALSE, include=FALSE}
@@ -249,7 +252,7 @@ set.seed(252)
   SL.library <- c("SL.mean","SL.glm")
   other_options <- c("SL.glm.interaction","SL.randomForest","SL.polymars","SL.rpartPrune","SL.biglasso")
 # SS, IPTW, & TMLE function
-  run.tmle <- function(Y,ObsData, SL.library, id=NULL) {
+  run.tmle <- function(Y,A,ObsData, SL.library, id=NULL) {
    
     #------------------------------------------
     # Estimate the conditional mean outcome Qbar(A,W)
@@ -259,19 +262,19 @@ set.seed(252)
         X <- ObsData[,names(ObsData) != Y]
       # settheA=1inX1andtheA=0inX0
         X1 <- X0<-X
-        X1$A <- 1 # under exposure
-        X0$A <- 0 # under control
+        X1[,A] <- 1 # under exposure
+        X0[,A] <- 0 # under control
     
        # call Super Learner for estimation of QbarAW
         QbarSL<- SuperLearner(Y=ObsData[,Y], X=X, SL.library=SL.library, family="gaussian", id=id)
         # QbarSL
         
        # initial estimates of the outcome, given the observed exposure & covariates
-        QbarAW <- predict(QbarSL, newdata=ObsData)$pred
+        QbarAW <- predict(QbarSL, newdata=ObsData)$pred/100
        # estimates of the outcome, given A=1 and covariates
-        Qbar1W<- predict(QbarSL, newdata=X1)$pred
+        Qbar1W<- predict(QbarSL, newdata=X1)$pred/100
        # estimates of the outcome, given A=0 and covariates
-        Qbar0W<- predict(QbarSL, newdata=X0)$pred
+        Qbar0W<- predict(QbarSL, newdata=X0)$pred/100
     
        # simple substitution estimator:
         PsiHat.SS<-mean(Qbar1W - Qbar0W)
@@ -281,7 +284,7 @@ set.seed(252)
     #------------------------------------------
   
      # call Super Learner for the exposure mechanism
-      gHatSL<- SuperLearner(Y=ObsData$A, X=subset(ObsData, select= -c(A,Y,id)),SL.library=SL.library, family="binomial", id=id)
+      gHatSL<- SuperLearner(Y=ObsData[,A], X=ObsData[,!(names(ObsData) %in% c(A,Y,id))],SL.library=SL.library, family="binomial", id=id)
      # generate predicted prob being exposed, given baseline covariates
       gHat1W<- gHatSL$SL.predict
      # predicted prob of not being exposed, given baseline covariates
@@ -289,25 +292,25 @@ set.seed(252)
   
      # # predicted prob of observed exposure, given baseline cov
      # gHatAW<- rep(NA, n)
-     # gHatAW[ObsData$A==1]<- gHat1W[ObsData$A==1]
-     # gHatAW[ObsData$A==0]<- gHat0W[ObsData$A==0]
+     # gHatAW[ObsData[,A]==1]<- gHat1W[ObsData[,A]==1]
+     # gHatAW[ObsData[,A]==0]<- gHat0W[ObsData[,A]==0]
   
     #-------------------------------------------------
     # Clever covariate H(A,W) for each subject
     #-------------------------------------------------
-      H.AW<- as.numeric(ObsData$A==1)/gHat1W - as.numeric(ObsData$A==0)/gHat0W
+      H.AW<- as.numeric(ObsData[,A]==1)/gHat1W - as.numeric(ObsData[,A]==0)/gHat0W
   
      # also want to evaluate the clever covariates at A=1 and A=0 for all subjects
        H.1W<- 1/gHat1W
        H.0W<- -1/gHat0W
        
      # IPTW estimator of the G-computation formula:
-      PsiHat.IPTW <-mean( H.AW*ObsData$Y)
+      PsiHat.IPTW <-mean( H.AW*ObsData[,Y])
   
     #------------------------------------------
     # Update the initial estimator of Qbar_0(A,W)
     #------------------------------------------
-      logitUpdate<- glm(ObsData$Y ~ -1 +offset(qlogis(QbarAW)) + H.AW, family='binomial')
+      logitUpdate<- glm(ObsData[,Y] ~ -1 +offset(qlogis(QbarAW)) + H.AW, family='gaussian')
       epsilon <- logitUpdate$coef
   
       QbarAW.star<- plogis(qlogis(QbarAW)+ epsilon*H.AW)
@@ -336,7 +339,7 @@ set.seed(252)
     nrow(sub_data)
     duplicated(sub_data$cds_code)
   # run function
-    out <- run.tmle(Y="math_standard_met", ObsData=sub_data[,c(2,3,12,13)], SL.library=SL.library) 
+    out <- run.tmle(Y="math_standard_met", A="pm25_12_plus", ObsData=sub_data[,-c(1,4)], SL.library=SL.library) 
       # generating a ton of errors. removing algorithms from SuperLearner
       # think interaction algorithms will be super problematic bc number of covariates is really high from all the districts
       # FIGURED OUT ISSUE: When we resample, not all districts are in each sample and predictions are generated for non-existent districts and not generated for extisting districts
